--- a/index.html
+++ b/index.html
@@ -421,5 +421,14 @@ mixpanel.track('Mixpanel Workshop');
     </div>
     <script src="js/app.js"></script>
     <script src="js/common.js"></script>
+    
+      <div id="tolstoy-container" style="line-height:0;overflow:hidden;height:100%;width:100%;text-align:center">
+        <iframe id="tolstoy" src="https://player.gotolstoy.com/mdpfxeelhzb3x?host"
+                style="width:100%;height:540px;max-width:960px"
+                scrolling="no" frameborder="0" allow="autoplay *; clipboard-write *;camera *; microphone *; encrypted-media *; fullscreen *; display-capture *;">
+        </iframe>
+        <script src="https://widget.gotolstoy.com/script.js" defer></script>
+      </div>
+    
   </body>
 </html>
